<resources>
    <!--Strings varios-->
    <string name="app_name">Hilfe</string>
    <string name="title_activity_ajustes">Ajustes</string>

    <!--Key dropbox-->
    <string name="APP_KEY">lwflczpa1h5gjl3</string>

    <!--Seccion datos personales-->
    <string name="seccion_datos_personales">Datos personales</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="apellido_usuario">Apellido</string>
    <string name="usar_datos_personales">Usar datos personales</string>
    <string name="usar_datos_personales_summary">Enviar por correo o SMS estos datos para facilitar a los servicios de emergencia su busqueda e identificacion.</string>

    <!--Seccion preferencias de tema-->
    <string name="seccion_preferencias_tema">Preferencias de tema</string>
    <string name="tipo_tema">Tema oscuro</string>

    <!--Seccion contacto desarrollador-->
    <string name="contacto_desarrollador">Contacto con el desarrollador</string>

    <!--Sección seguridad-->
    <string name="seccion_seguridad">Seguridad</string>
    <string name="consentimiento_string">Activar funciones de autenticacion.</string>
    <string name="password">Contraseña</string>
    <string name="consentimiento_summary">Se activará la opcion contraseña.</string>
    <string name="cambio_pass">Cambiar contraseña</string>
    <string name="cambio_pass_summary">Cambiar contraseña sumario</string>

    <!--Copia de seguridad/respaldo en la nube-->
    <string name="seccion_respaldo">Copia de seguridad/respaldo en la nube</string>
    <string name="respaldo">Realizar copia de seguridad</string>
    <string name="respaldo_summary">Se realizará una copia de seguridad de los datos de la aplicacion para poder recuperarlos más adelante.</string>
    <string name="respaldo_recuperar">Restaurar datos</string>
    <string name="respaldo_recuperar_summary">Se recuperaran los datos anteriormente respaldados.</string>

    <!--Seccion metodo de contacto-->
    <string name="seccion_metodo_contacto">Opciones de contacto</string>
    <string name="seleccion_metodo">Selección metodo de contacto</string>
    <string name="metodo_summary">Aqui podrá seleccionar la manera en la que se contactará con la persona que se haya definido.</string>

    <!--Seccion metodo contacto: Correo electrónico-->
    <string name="seccion_metodo_contacto_correo_titulo">Opciones de contacto: Correo</string>
    <string name="correo_defecto">Correo por defecto</string>
    <string name="correo_defecto_summary">Este será el correo electrónico por defecto al que se enviará el mensaje.</string>
    <string name="correo_asunto">Asunto por defecto</string>
    <string name="correo_asunto_summary">Este será el asunto por defecto que tendrá el correo enviado.</string>
    <string name="correo_cuerpo">Cuerpo por defecto</string>
    <string name="correo_cuerpo_summary">Este será el cuerpo por defecto que tendrá el correo enviado.</string>

    <!--Sección metodo contacto: SMS-->
    <string name="seccion_metodo_contacto_sms_titulo">Opciones método contacto: SMS</string>
    <string name="sms_numero_defecto">Número de telefono por defecto</string>
    <string name="sms_texto_defecto">Texto a enviar por defecto</string>

    <!--FAQ-->
    <string name="FAQ_Q1">Q: ¿Puedo ponerme en contacto con el desarrollador para reportar bugs o consultar dudas respecto a la app?</string>
    <string name="FAQ_A1">A: Si, en el apartado de ajustes encontrarás una opción (Contacto con el desarrollador).</string>
    <string name="FAQ_Q2">Q: ¿Se pueden realizar varias acciones al pulsar el botón? Por ejemplo, que envie un e-mail y luego llame al teléfono indicado.</string>
    <string name="FAQ_A2">A: Es una opción que estoy pensando en introducir en la aplicacion, pero por el momento no es posible.</string>
    <string name="FAQ_Q3">Q: ¿Cómo puedo hacer una copia de seguridad de mis contactos?</string>
    <string name="FAQ_A3">A: Sencillo, en el apartado de ajustes hay una opción llamada (Realizar copia de seguridad). Una vez ahi, pulsamos sobre ella
        y nos preguntará si queremos hacer el respaldo, le decimos que si y ya estaría hecha la copia.</string>
    <string name="FAQ_Q4">Q: ¿Dónde puedo establecer un número de teléfono por defecto?</string>
    <string name="FAQ_A4">A: En el apartado de contactos, pulsas sobre el contacto que quieras establecer como predeterminado y aparecerá una ventana donde veras un botón llamado (Establecer como predeterminado).</string>


</resources>
