<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/seccion_datos_personales">
        <EditTextPreference
            app:key="Nombre"
            app:title="@string/nombre_usuario"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="Apellido"
            app:title="@string/apellido_usuario"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="Direccion"
            app:title="@string/direccion_usuario"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/seccion_preferencias_tema">
        <SwitchPreference
            app:defaultValue="false"
            app:key="Tema"
            app:title="@string/tipo_tema" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/contacto_desarrollador">
        <PreferenceScreen
            android:key="Soporte"
            android:summary="Contacte con el desarrollador para consultar dudas o reportar errores."
            android:title="Soporte" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.example.hilfe_ultimate.DeveloperContact"
                android:targetPackage="com.example.hilfe_ultimate" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>

