<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FAQ">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_Q1"
        android:textColor="#000000"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_A1"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_Q2"
        android:textColor="#000000"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_A2"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_Q3"
        android:textColor="#000000"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_A3"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_Q4"
        android:textColor="#000000"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_A4"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
    </TextView>

</LinearLayout>